<layout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tool="http://schemas.android.com/tools">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/layout_search_constraints"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/color_background"
		android:clickable="true"
		android:focusable="true"
		android:focusableInTouchMode="true">

		<ImageView
			android:id="@+id/img_icon"
			android:layout_width="100dp"
			android:layout_height="0dp"
			android:layout_margin="@dimen/dimen_8dp"
			android:contentDescription="@string/cd_search"
			app:layout_constraintBottom_toTopOf="@id/txt_title"
			app:layout_constraintDimensionRatio="H,1:1"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_chainStyle="packed"
			tool:src="@drawable/ic_movies" />

		<TextView
			android:id="@+id/txt_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/dimen_8dp"
			android:gravity="center"
			android:textColor="@color/color_primary_text"
			android:textSize="@dimen/dimen_24sp"
			android:textStyle="bold"
			app:layout_constrainedWidth="true"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/img_icon"
			tool:text="Category" />

		<androidx.cardview.widget.CardView
			android:id="@+id/card_search"
			android:layout_width="0dp"
			android:layout_height="?attr/actionBarSize"
			android:layout_margin="@dimen/activity_default_margin"
			app:cardCornerRadius="@dimen/dimen_8dp"
			app:cardElevation="@dimen/dimen_4dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<EditText
					android:id="@+id/edit_search"
					android:layout_width="0dp"
					android:layout_height="0dp"
					android:background="@null"
					android:drawableStart="@drawable/ic_search"
					android:drawablePadding="@dimen/dimen_8dp"
					android:hint="@string/hint_search"
					android:imeOptions="actionSearch"
					android:importantForAutofill="no"
					android:inputType="textCapSentences"
					android:padding="@dimen/dimen_8dp"
					android:singleLine="true"
					android:textColor="@color/color_primary_text"
					android:textColorHint="@color/color_secondary_text"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toStartOf="@id/img_btn_cancel"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

				<ImageView
					android:id="@+id/img_btn_cancel"
					android:layout_width="0dp"
					android:layout_height="0dp"
					android:background="?actionBarItemBackground"
					android:contentDescription="@string/cd_cancel"
					android:padding="@dimen/dimen_16dp"
					android:src="@drawable/ic_cancel"
					android:visibility="gone"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintDimensionRatio="H,1:1"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="parent" />
			</androidx.constraintlayout.widget.ConstraintLayout>
		</androidx.cardview.widget.CardView>

		<androidx.coordinatorlayout.widget.CoordinatorLayout
			android:id="@+id/coordinator_search"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<com.google.android.material.appbar.AppBarLayout
				android:id="@+id/app_bar_search"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@android:color/transparent"
				app:elevation="0dp">

				<View
					android:id="@+id/view_tool_bar_search"
					android:layout_width="match_parent"
					android:layout_height="?attr/actionBarSize"
					android:layout_marginTop="@dimen/dimen_24dp"
					app:layout_scrollFlags="scroll|enterAlwaysCollapsed" />
			</com.google.android.material.appbar.AppBarLayout>

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/recycler_search"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:clipToPadding="false"
				android:overScrollMode="never"
				android:paddingBottom="@dimen/dimen_8dp"
				android:splitMotionEvents="false"
				app:layout_behavior="@string/appbar_scrolling_view_behavior" />
		</androidx.coordinatorlayout.widget.CoordinatorLayout>

		<androidx.constraintlayout.widget.ConstraintLayout
			android:id="@+id/layout_blur"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="@color/color_blur_view"
			android:clickable="true"
			android:elevation="@dimen/dimen_4dp"
			android:focusable="true"
			android:visibility="gone">

			<androidx.cardview.widget.CardView
				android:id="@+id/card_peek_poster"
				android:layout_width="250dp"
				android:layout_height="0dp"
				android:layout_margin="@dimen/activity_default_margin"
				android:visibility="gone"
				app:cardCornerRadius="@dimen/dimen_8dp"
				app:cardElevation="@dimen/dimen_8dp"
				app:layout_constraintBottom_toBottomOf="parent"
				app:layout_constraintDimensionRatio="H,3:4"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent">

				<ImageView
					android:id="@+id/img_peek_poster"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_centerInParent="true"
					android:contentDescription="@string/cd_big_poster"
					android:scaleType="centerCrop"
					android:src="@drawable/placeholder_poster" />

				<TextView
					android:id="@+id/txt_peek_title_date"
					android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:background="@drawable/bg_blur_vertical_gradient"
					android:gravity="start|bottom"
					android:padding="@dimen/activity_default_margin"
					android:shadowColor="@android:color/black"
					android:shadowRadius="2"
					android:textColor="@android:color/white"
					android:textSize="@dimen/dimen_20sp"
					android:textStyle="bold" />

			</androidx.cardview.widget.CardView>

		</androidx.constraintlayout.widget.ConstraintLayout>
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>